--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@shopify/react-native-skia": "1.0.4",
+    "d3-shape": "^3.2.0",
     "react": "18.0.0",
     "react-native": "0.69.3",
     "react-native-ble-plx": "^2.0.3",
