--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@shopify/react-native-skia": "1.0.4",
+    "d3-shape": "^3.2.0",
     "react": "18.0.0",
     "react-native": "0.69.3",
     "react-native-ble-plx": "^2.0.3",
@@ -19,6 +22,8 @@
     "react-native-highcharts": "^1.0.2",
     "react-native-permissions": "^3.6.1",
     "react-native-quick-base64": "^2.0.5",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
     "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
