--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-quick-base64": "^2.0.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-svg": "^15.1.0"
+    "react-native-svg": "^15.1.0",
+    "upgrade": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
